EHO-400 tooltip added to clear selection and filter options icons. Fixed alignment

--- a/eHour-web/src/main/webapp/css/ehour.css
+++ b/eHour-web/src/main/webapp/css/ehour.css
@@ -875,7 +875,7 @@ hr {
 }
 
 .reportCriteriaDropdown {
-    width: 90%;
+    width: 95%;
     height: 180px;
     margin-bottom: 5px;
 }
