--- a/eHour-wicketweb/src/main/java/net/rrm/ehour/ui/report/panel/criteria/report_criteria.css
+++ b/eHour-wicketweb/src/main/java/net/rrm/ehour/ui/report/panel/criteria/report_criteria.css
@@ -12,8 +12,8 @@
 
 .foldIcon {
     float: right;
-    width: 50px;
-    padding-right: 2.45em;
+    width: 32px;
+    padding-right: 5%;
 }
 
 .filterContainer {
